# bfloat16

./: .gitignore  BFloat16-inl.h  BFloat16.h  CMakeLists.txt  README.md  main.cpp
